use more ORM and edit code for efficiency