@@ -1,14 +1,13 @@
 package com.example.library.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-import com.example.library.dto.*;
+import com.example.library.dto.Auth.*;
 import com.example.library.entity.Role;
 import com.example.library.entity.User;
 import com.example.library.mapper.UserMapper;
 import com.example.library.repository.UserRepository;
-import com.example.library.util.ApiResponse;
+import com.example.library.dto.ResultDto;
 import com.example.library.util.JWTTokenUtil;
 import com.example.library.util.ResponseUtil;
 import com.raika.customexception.exceptions.BaseException;
@@ -24,7 +23,7 @@ public class AuthService {
     private final PasswordEncoder passwordEncoder;
     private final UserMapper userMapper;
 
-    public ApiResponse<AuthResponseDto> register(RegisterRequestDto requestDto) {
+    public ResultDto<AuthResponseDto> register(RegisterRequestDto requestDto) {
         try {
             if (userRepository.existsByUsername(requestDto.getUsername())) {
                 throw new CustomException.Conflict("Username already taken");
@@ -43,18 +42,13 @@ public class AuthService {
         }
     }
 
-    public ApiResponse<AuthResponseDto> login(LoginRequestDto requestDto) {
+    public ResultDto<AuthResponseDto> login(LoginRequestDto requestDto) {
         try {
-            User user = userRepository.findByUsername(requestDto.getUsername())
+            String encodedPassword = passwordEncoder.encode(requestDto.getPassword());
+            User user = userRepository.findUserByUsernameAndPassword(requestDto.getUsername(), encodedPassword)
                     .orElseThrow(() -> new CustomException.ValidationFailure("Invalid username or password"));
-
-            if (!passwordEncoder.matches(requestDto.getPassword(), user.getPassword())) {
-                throw new CustomException.ValidationFailure("Invalid username or password");
-            }
-
             String accessToken = JWTTokenUtil.generateAccessToken(user.getUsername(), String.valueOf(user.getRole()));
             String refreshToken = JWTTokenUtil.generateRefreshToken(user.getUsername());
-
             return ResponseUtil.success(new AuthResponseDto(accessToken, refreshToken));
         } catch (BaseException exception) {
             throw exception;
@@ -63,7 +57,7 @@ public class AuthService {
         }
     }
 
-    public ApiResponse<AuthResponseDto> refresh(RefreshTokenRequestDto refreshTokenRequest) {
+    public ResultDto<AuthResponseDto> refreshToken(RefreshTokenRequestDto refreshTokenRequest) {
         try {
             String accessToken = JWTTokenUtil.refreshAccessToken(refreshTokenRequest.getRefreshToken());
             return ResponseUtil.success(new AuthResponseDto(accessToken, refreshTokenRequest.getRefreshToken()));
@@ -74,12 +68,12 @@ public class AuthService {
         }
     }
 
-    public ApiResponse<List<UserDto>> getAllUsers() {
+    public ResultDto<List<ResponseUserDto>> getList() {
         try {
             var list = userRepository.findAll()
                     .stream()
                     .map(userMapper::toDto)
-                    .collect(Collectors.toList());
+                    .toList();
             return ResponseUtil.success(list);
         } catch (BaseException exception) {
             throw exception;
@@ -88,11 +82,10 @@ public class AuthService {
         }
     }
 
-    public ApiResponse<UserDto> getUserById(Long id) {
+    public ResultDto<ResponseUserDto> getUserById(Long id) {
         try {
             User user = userRepository.findById(id)
                     .orElseThrow(() -> new CustomException.NotFound("User not found with ID: " + id));
-
             return ResponseUtil.success(userMapper.toDto(user));
         } catch (BaseException exception) {
             throw exception;
@@ -101,7 +94,7 @@ public class AuthService {
         }
     }
 
-    public ApiResponse<Boolean> deleteUser(Long id) {
+    public ResultDto<Boolean> delete(Long id) {
         try {
             if (!userRepository.existsById(id)) {
                 throw new CustomException.NotFound("User not found with ID: " + id);
