@@ -1,10 +1,10 @@
 package com.example.library.service;
 
-import com.example.library.dto.BookGroupDto;
-import com.example.library.dto.BookGroupReqDto;
+import com.example.library.dto.BookGroup.ResponseBookGroupDto;
+import com.example.library.dto.BookGroup.CreateUpdateBookGroupDto;
 import com.example.library.mapper.BookGroupMapper;
 import com.example.library.repository.BookGroupRepository;
-import com.example.library.util.ApiResponse;
+import com.example.library.dto.ResultDto;
 import com.example.library.util.ResponseUtil;
 import com.raika.customexception.exceptions.BaseException;
 import com.raika.customexception.exceptions.CustomException;
@@ -13,7 +13,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @AllArgsConstructor
 @Service
@@ -22,11 +21,11 @@ public class BookGroupService {
     private final BookGroupRepository bookGroupRepository;
     private final BookGroupMapper bookGroupMapper;
 
-    public ApiResponse<List<BookGroupDto>> searchBookGroups(String keyword) {
+    public ResultDto<List<ResponseBookGroupDto>> search(String keyword) {
         try {
-            var filteredGroups = bookGroupRepository.searchByKeyword(keyword).stream()
+            var filteredGroups = bookGroupRepository.findBookGroupByNameContainingIgnoreCase(keyword).stream()
                     .map(bookGroupMapper::toDto)
-                    .collect(Collectors.toList());
+                    .toList();
             return ResponseUtil.success(filteredGroups);
         } catch (Exception e) {
             throw new CustomException.ServerError("Error while searching for book groups: " + e.getMessage());
@@ -34,10 +33,14 @@ public class BookGroupService {
     }
 
     @Transactional
-    public ApiResponse<BookGroupDto> createBookGroup(BookGroupReqDto bookGroupReqDto) {
+    public ResultDto<ResponseBookGroupDto> create(CreateUpdateBookGroupDto bookGroupReqDto) {
         try {
             if (bookGroupRepository.existsByName(bookGroupReqDto.getName())) {
-                throw new CustomException.Conflict("Book group with the name '" + bookGroupReqDto.getName() + "' already exists.");
+                throw new CustomException.Conflict(
+                        "Book group with the name '" +
+                                bookGroupReqDto.getName() +
+                                "' already exists."
+                );
             }
             var bookGroup = bookGroupMapper.toEntity(bookGroupReqDto);
             var savedBookGroup = bookGroupRepository.save(bookGroup);
@@ -49,11 +52,11 @@ public class BookGroupService {
         }
     }
 
-    public ApiResponse<List<BookGroupDto>> getAllBookGroups() {
+    public ResultDto<List<ResponseBookGroupDto>> getAll() {
         try {
             var bookGroups = bookGroupRepository.findAll().stream()
                     .map(bookGroupMapper::toDto)
-                    .collect(Collectors.toList());
+                    .toList();
             return ResponseUtil.success(bookGroups);
         } catch (BaseException exception) {
             throw exception;
@@ -63,7 +66,7 @@ public class BookGroupService {
     }
 
     @Transactional
-    public ApiResponse<BookGroupDto> updateBookGroup(Long id, BookGroupReqDto bookGroupReqDto) {
+    public ResultDto<ResponseBookGroupDto> update(Long id, CreateUpdateBookGroupDto bookGroupReqDto) {
         try {
             var bookGroup = bookGroupRepository.findById(id)
                     .orElseThrow(() -> new CustomException.NotFound("Book group with ID " + id + " not found."));
@@ -78,7 +81,7 @@ public class BookGroupService {
     }
 
     @Transactional
-    public ApiResponse<Boolean> deleteBookGroup(Long id) {
+    public ResultDto<Boolean> delete(Long id) {
         try {
             if (!bookGroupRepository.existsById(id)) {
                 throw new CustomException.NotFound("Book group with ID " + id + " not found.");
