@@ -1,10 +1,11 @@
 package com.example.library.service;
 
-import com.example.library.dto.BookRequestDto;
+import com.example.library.dto.BookRequest.CreateBookRequestDto;
+import com.example.library.dto.BookRequest.ResponseBookRequestDto;
 import com.example.library.mapper.BookRequestMapper;
 import com.example.library.repository.BookRequestRepository;
 import com.example.library.repository.UserRepository;
-import com.example.library.util.ApiResponse;
+import com.example.library.dto.ResultDto;
 import com.example.library.util.ResponseUtil;
 import com.raika.customexception.exceptions.BaseException;
 import com.raika.customexception.exceptions.CustomException;
@@ -30,19 +31,20 @@ public class BookRequestService extends SuperService {
     }
 
     @Transactional
-    public ApiResponse<BookRequestDto> createBookRequest(BookRequestDto bookRequestDto) {
+    public ResultDto<ResponseBookRequestDto> create(CreateBookRequestDto createBookRequestDto) {
         try {
             var username = getUsername();
-            var existingRequest = bookRequestRepository.findByAuthorAndTitle(bookRequestDto.getAuthor(), bookRequestDto.getTitle());
+            var existingRequest = bookRequestRepository.findByAuthorAndTitle(
+                    createBookRequestDto.getAuthor(), createBookRequestDto.getTitle());
             if (existingRequest.isPresent()) {
                 throw new CustomException.BadRequest("Book request already exists for the user and book.");
             }
-            var bookRequest = bookRequestMapper.toEntity(bookRequestDto); // Use BookRequestMapper for mapping
+            var bookRequest = bookRequestMapper.toEntity(createBookRequestDto);
             bookRequest.setUser(userRepository.findByUsername(username)
                     .orElseThrow(() -> new CustomException.NotFound("User not found: " + username)));
             bookRequest.setFulfilled(false);
             bookRequestRepository.save(bookRequest);
-            return ResponseUtil.created(bookRequestDto);
+            return ResponseUtil.created(bookRequestMapper.toDto(bookRequest));
         } catch (BaseException exception) {
             throw exception;
         } catch (Exception exception) {
@@ -50,12 +52,11 @@ public class BookRequestService extends SuperService {
         }
     }
 
-    @Transactional(readOnly = true)
-    public ApiResponse<List<BookRequestDto>> getAllUserBookRequests() {
+    public ResultDto<List<ResponseBookRequestDto>> getListAdmin() {
         try {
             var bookRequests = bookRequestRepository.findAll().stream()
-                    .map(bookRequestMapper::toDto) // Use BookRequestMapper for mapping
-                    .collect(Collectors.toList());
+                    .map(bookRequestMapper::toDto)
+                    .toList();
             return ResponseUtil.success(bookRequests);
         } catch (BaseException exception) {
             throw exception;
@@ -64,16 +65,13 @@ public class BookRequestService extends SuperService {
         }
     }
 
-    @Transactional(readOnly = true)
-    public ApiResponse<List<BookRequestDto>> getAllBookRequests() {
+    public ResultDto<List<ResponseBookRequestDto>> getList() {
         try {
             var username = getUsername();
-            var userId = userRepository.findByUsername(username)
-                    .orElseThrow(() -> new CustomException.NotFound("User not found: " + username))
-                    .getId();
-            var bookRequests = bookRequestRepository.findByUserId(userId).stream()
+            var bookRequests = bookRequestRepository.findByUsername(username)
+                    .stream()
                     .map(bookRequestMapper::toDto)
-                    .collect(Collectors.toList());
+                    .toList();
             return ResponseUtil.success(bookRequests);
         } catch (BaseException exception) {
             throw exception;
@@ -83,12 +81,12 @@ public class BookRequestService extends SuperService {
     }
 
     @Transactional
-    public ApiResponse<Boolean> deleteBookRequest(Long id) {
+    public ResultDto<Boolean> delete(Long id) {
         try {
-            if (!bookRequestRepository.existsById(id)) {
+            int deletedRows = bookRequestRepository.deleteByIdAndReturnAffectedRows(id);
+            if (deletedRows == 0) {
                 throw new CustomException.NotFound("BookRequest not found with id: " + id);
             }
-            bookRequestRepository.deleteById(id);
             return ResponseUtil.success(true);
         } catch (BaseException exception) {
             throw exception;
@@ -98,16 +96,13 @@ public class BookRequestService extends SuperService {
     }
 
     @Transactional
-    public ApiResponse<Boolean> updateRequestStatus(Long id, boolean status) {
+    public ResultDto<Boolean> update(Long id, boolean status) {
         try {
             var bookRequest = bookRequestRepository.findById(id)
                     .orElseThrow(() -> new CustomException.NotFound("BookRequest not found with id: " + id));
-            if (status) {
-                bookRequest.setFulfilled(true);
-                bookRequestRepository.save(bookRequest);
-                return ResponseUtil.updated(true);
-            }
-            return ResponseUtil.updated(false);
+            bookRequest.setFulfilled(status);
+            bookRequestRepository.save(bookRequest);
+            return ResponseUtil.updated(true);
         } catch (BaseException exception) {
             throw exception;
         } catch (Exception exception) {
