@@ -1,12 +1,13 @@
 package com.example.library.service;
 
-import com.example.library.dto.BookDto;
+import com.example.library.dto.Book.CreateUpdateBookDto;
+import com.example.library.dto.Book.ResponseBookDto;
 import com.example.library.entity.Book;
 import com.example.library.entity.BookGroup;
 import com.example.library.mapper.BookMapper;
 import com.example.library.repository.BookGroupRepository;
 import com.example.library.repository.BookRepository;
-import com.example.library.util.ApiResponse;
+import com.example.library.dto.ResultDto;
 import com.example.library.util.ResponseUtil;
 import com.raika.customexception.exceptions.BaseException;
 import com.raika.customexception.exceptions.CustomException;
@@ -15,7 +16,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @AllArgsConstructor
 @Service
@@ -25,26 +25,25 @@ public class BookService {
     private final BookMapper bookMapper;
 
     // Get all books
-    public ApiResponse<List<BookDto>> getAllBooks() {
+    public ResultDto<List<ResponseBookDto>> getAll() {
         try {
-            List<BookDto> allBooks = bookRepository.findAll()
+            List<ResponseBookDto> allBooks = bookRepository.findAll()
                     .stream()
-                    .map(bookMapper::toDto)
-                    .collect(Collectors.toList());
+                    .map(bookMapper::toDto).toList();
             return ResponseUtil.success(allBooks);
         } catch (BaseException exception) {
             throw exception;
         } catch (Exception exception) {
-            throw new CustomException.ServerError(exception.getMessage());
+            throw new CustomException.ServerError("dont.don");
         }
     }
 
     // Get a single book by ID
-    public ApiResponse<BookDto> getBookById(Long id) {
+    public ResultDto<ResponseBookDto> findById(Long id) {
         try {
-            var result = bookRepository.findById(id).map(bookMapper::toDto)
+            var result = bookRepository.findById(id)
                     .orElseThrow(() -> new CustomException.NotFound("Book not found"));
-            return ResponseUtil.success(result);
+            return ResponseUtil.success(bookMapper.toDto(result));
         } catch (BaseException exception) {
             throw exception;
         } catch (Exception exception) {
@@ -53,7 +52,7 @@ public class BookService {
     }
 
 
-    public ApiResponse<BookDto> addBook(BookDto bookDto) {
+    public ResultDto<ResponseBookDto> create(CreateUpdateBookDto bookDto) {
         try {
             if (bookRepository.findByTitleAndAuthor(bookDto.getAuthor(), bookDto.getTitle())) {
                 throw new CustomException.Conflict("Duplicate Book");
@@ -63,7 +62,7 @@ public class BookService {
             Book book = bookMapper.toEntity(bookDto);
             book.setGroup(bookGroup);
             Book savedBook = bookRepository.save(book);
-            return ResponseUtil.created(bookMapper.toDto(savedBook));
+            return ResponseUtil.success(bookMapper.toDto(savedBook));
         } catch (BaseException e) {
             throw e;
         } catch (Exception e) {
@@ -72,7 +71,7 @@ public class BookService {
     }
 
     @Transactional
-    public ApiResponse<BookDto> updateBook(Long id, BookDto bookDto) {
+    public ResultDto<ResponseBookDto> update(Long id, CreateUpdateBookDto bookDto) {
         try {
             var existingBook = bookRepository.findById(id)
                     .orElseThrow(() -> new CustomException.NotFound("Book not found with ID: " + id));
@@ -92,11 +91,11 @@ public class BookService {
     }
 
 
-    public ApiResponse<List<BookDto>> searchBooks(String keyword) {
+    public ResultDto<List<ResponseBookDto>> search(String keyword) {
         try {
-            var list = bookRepository.searchByKeyword(keyword).stream()
+            var list = bookRepository.findByTitleContainingIgnoreCase(keyword).stream()
                     .map(bookMapper::toDto)
-                    .collect(Collectors.toList());
+                    .toList();
             return ResponseUtil.success(list);
         } catch (BaseException exception) {
             throw exception;
@@ -107,12 +106,12 @@ public class BookService {
 
 
     @Transactional
-    public ApiResponse<Boolean> deleteBook(Long id) {
+    public ResultDto<Boolean> delete(Long id) {
         try {
-            if (!bookRepository.existsById(id)) {
-                throw new CustomException.NotFound("Book not found with ID: " + id);
-            }
-            bookRepository.deleteById(id);
+           var book = bookRepository.findById(id).orElseThrow(
+                   () -> new CustomException.NotFound("")
+           );
+           bookRepository.delete(book);
             return ResponseUtil.success(true);
         } catch (BaseException exception) {
             throw exception;
